# pinetime-hypnos

./: .gitignore  Makefile  README.md  west.yml
.github/workflows/: main.yml
app/: CMakeLists.txt  Kconfig.hypnos  Kconfig.pinetime  west.yml
app/boards/arm/p8/: Kconfig.board  p8.dts  p8.yaml  p8_defconfig
app/boards/arm/pinetime/: board.cmake  (+3 more)
app/hypnos/: CMakeLists.txt  bootloader.conf  logging.conf  prj.conf
app/hypnos/config/: bootloader.conf  prj.conf
app/hypnos/include/: bt.h  common.h  display.h  event_handler.h  gfx.h  gui.h  log.h  version.h
app/hypnos/src/: accelerometer.c  backlight.c  battery.c  bt.c  clock.c  cts_sync.c  display.c  event_handler.c  gfx.c  gui.c  log.c  main.c
app/include/: battery.h
app/subsys/battery/: battery.c
app/zephyr/: module.yml
boards/arm/p8/: Kconfig  Kconfig.defconfig
boards/arm/pinetime/: pinetime.dts  pinetime_defconfig
drivers/sensor/bma421/: CMakeLists.txt  Kconfig  bma4.c  bma421.c  bma421.h  bma421_config copy 2.h  bma421_config copy.h  bma421_config.h  bma421_features.c  bma421_features.h  bma421_trigger.c
drivers/sensor/cst816s/: cst816s.c  cst816s.h  cst816s_trigger.c
hypnos/: CMakeLists.txt  MPL-LICENSE-NOTICE  logging.conf  prj.conf
hypnos/include/: accelerometer.h  backlight.h  battery.h  bt.h  clock.h  cts_sync.h  display.h  event_handler.h  gfx.h  log.h  touch.h
hypnos/src/: accelerometer.c  backlight.c  battery.c  bt.c  clock.c  cts_sync.c  display.c  evelyn.c  event_handler.c  gfx.c  log.c  main.c  rubik_regular_34.c  rubik_regular_68.c  touch.c
include/drivers/sensor/: bma421.h
(+19 files in other folders)
